update feature sponsor

--- a/app/views/backend/shared/_sidebar_left.html.erb
+++ b/app/views/backend/shared/_sidebar_left.html.erb
@@ -177,6 +177,25 @@
 					<a href="#" class="sidebar-nav-menu">
 						<i class="fa fa-angle-left sidebar-nav-indicator sidebar-nav-mini-hide"></i>
 						<i class="gi gi-google_maps sidebar-nav-icon"></i> 
+						<span class="sidebar-nav-mini-hide">Sponsor</span>
+					</a>
+					<ul>
+						<li>
+							<%= link_to new_backend_sponsor_path do %>
+							New data
+							<% end %>
+						</li>
+						<li>
+							<%= link_to backend_sponsors_path do %>
+							List data
+							<% end %>
+						</li>
+					</ul>
+				</li>
+				<li>
+					<a href="#" class="sidebar-nav-menu">
+						<i class="fa fa-angle-left sidebar-nav-indicator sidebar-nav-mini-hide"></i>
+						<i class="gi gi-google_maps sidebar-nav-icon"></i> 
 						<span class="sidebar-nav-mini-hide">Web Setting</span>
 					</a>
 					<ul>
