--- a/app/views/backend/products/_form.html.erb
+++ b/app/views/backend/products/_form.html.erb
@@ -64,41 +64,47 @@
 						</div>
 					</div>
 				</div>
-				<div class="panel panel-default">
-					<div class="panel-heading">Property Details</div>
-					<div class="panel-body">
-						<%= f.fields_for(:product_property) do |product_property| %>
-							<%= render partial: 'product_property_form', locals: { product_property: product_property } %>
-						<% end %>
-					</div>
-				</div>
-				
-				<div class="panel panel-default">
-					<div class="panel-heading">Bike Details</div>
-					<div class="panel-body">
-						<%= f.fields_for(:bike_property) do |bike_property| %>
-							<%= render partial: 'product_bike_form', locals: { bike_property: bike_property } %>
-						<% end %>
-					</div>
-				</div>
 
-				<div class="panel panel-default">
-					<div class="panel-heading">Car Details</div>
-					<div class="panel-body">
-						<%= f.fields_for(:car) do |product_car| %>
-							<%= render partial: 'product_car', locals: { product_car: product_car } %>
-						<% end %>
-					</div>
-				</div>
+				<% if params[:catalog_type] %>
+					<% if params[:catalog_type] == 'property' %>
+						<div class="panel panel-default">
+							<div class="panel-heading">Property Details</div>
+							<div class="panel-body">
+								<%= f.fields_for(:product_property) do |product_property| %>
+									<%= render partial: 'product_property_form', locals: { product_property: product_property } %>
+								<% end %>
+							</div>
+						</div>
+					<% elsif params[:catalog_type] == 'bike' %>
+						<div class="panel panel-default">
+							<div class="panel-heading">Bike Details</div>
+							<div class="panel-body">
+								<%= f.fields_for(:bike_property) do |bike_property| %>
+									<%= render partial: 'product_bike_form', locals: { bike_property: bike_property } %>
+								<% end %>
+							</div>
+						</div>
+					<% elsif params[:catalog_type] == 'car' %>
+						<div class="panel panel-default">
+							<div class="panel-heading">Car Details</div>
+							<div class="panel-body">
+								<%= f.fields_for(:car) do |product_car| %>
+									<%= render partial: 'product_car', locals: { product_car: product_car } %>
+								<% end %>
+							</div>
+						</div>
+					<% elsif params[:catalog_type] == 'gadget' %>
+						<div class="panel panel-default">
+							<div class="panel-heading">Gadget Details</div>
+							<div class="panel-body">
+								<%= f.fields_for(:gadget) do |gadget| %>
+									<%= render partial: 'product_gadget_form', locals: { gadget: gadget } %>
+								<% end %>
+							</div>
+						</div>
+					<% end %>
+				<% end %>
 
-				<div class="panel panel-default">
-					<div class="panel-heading">Gadget Details</div>
-					<div class="panel-body">
-						<%= f.fields_for(:gadget) do |gadget| %>
-							<%= render partial: 'product_gadget_form', locals: { gadget: gadget } %>
-						<% end %>
-					</div>
-				</div>
 				<div class="panel panel-default">
 					<div class="panel-heading">Address Details</div>
 					<div class="panel-body">
