--- a/app/views/backend/shared/_sidebar_left.html.erb
+++ b/app/views/backend/shared/_sidebar_left.html.erb
@@ -60,12 +60,12 @@
 					</a>
 					<ul>
 						<li>
-							<%= link_to new_backend_product_path do %>
+							<%= link_to new_backend_product_path(catalog_type: 'property') do %>
 							New data
 							<% end %>
 						</li>
 						<li>
-							<%= link_to backend_products_path do %>
+							<%= link_to backend_products_path(catalog_type: 'property') do %>
 							List data
 							<% end %>
 						</li>
@@ -100,12 +100,12 @@
 					</a>
 					<ul>
 						<li>
-							<%= link_to new_backend_product_path do %>
+							<%= link_to new_backend_product_path(catalog_type: 'gadget')  do %>
 							New data
 							<% end %>
 						</li>
 						<li>
-							<%= link_to backend_products_path do %>
+							<%= link_to backend_products_path(catalog_type: 'gadget') do %>
 							List data
 							<% end %>
 						</li>
@@ -120,12 +120,12 @@
 					</a>
 					<ul>
 						<li>
-							<%= link_to new_backend_product_path do %>
+							<%= link_to new_backend_product_path(catalog_type: 'bike')  do %>
 							New data
 							<% end %>
 						</li>
 						<li>
-							<%= link_to backend_products_path do %>
+							<%= link_to backend_products_path(catalog_type: 'bike') do %>
 							List data
 							<% end %>
 						</li>
@@ -140,12 +140,12 @@
 					</a>
 					<ul>
 						<li>
-							<%= link_to new_backend_product_path do %>
+							<%= link_to new_backend_product_path(catalog_type: 'car')  do %>
 							New data
 							<% end %>
 						</li>
 						<li>
-							<%= link_to backend_products_path do %>
+							<%= link_to backend_products_path(catalog_type: 'car') do %>
 							List data
 							<% end %>
 						</li>
