revision new add from params catageory

--- a/app/views/backend/products/index.html.erb
+++ b/app/views/backend/products/index.html.erb
@@ -3,7 +3,7 @@
 	<div class="block full">
 		<div class="block-title">
 			<div class="block-options pull-right">
-				<%= link_to new_backend_product_path do %>
+				<%= link_to new_backend_product_path(catalog_type: params[:catalog_type]) do %>
 					<div class="btn btn-success">
 						New Data
 					</div>
