--- a/app/views/backend/products/index.html.erb
+++ b/app/views/backend/products/index.html.erb
@@ -33,7 +33,7 @@
 						</td>
 						<td class="text-center">
 							<div class="btn-group">
-								<%= link_to 'Edit', edit_backend_product_path(product), class: 'btn btn-default btn-sm' %> 
+								<%= link_to 'Edit', edit_backend_product_path(product, catalog_type: params[:catalog_type]), class: 'btn btn-default btn-sm' %> 
 								<%= link_to 'Delete', backend_product_path(product), method: 'delete', class: 'btn btn-danger btn-sm' %> 
 							</div>
 						</td>
