--- a/app/views/backend/sponsors/_form.html.erb
+++ b/app/views/backend/sponsors/_form.html.erb
@@ -18,16 +18,18 @@
 				</div>
 			</div>
 			<div class="form-group">
-				<label class="col-md-4 control-label" for="example-chosen">Link_Url</label>
+				<label class="col-md-4 control-label" for="example-chosen">Link URL</label>
 				<div class="col-md-6">
-					<%= f.text_field :link_url, class: 'form-control', placeholder: 'Link_Url' %>
+					<%= f.text_field :link_url, class: 'form-control', placeholder: 'ex: http://www.google.com' %>
 				</div>
 			</div>
+			<div class="form-group">
 				<label class="col-md-4 control-label" for="example-chosen">Image</label>
-		<div class="col-md-6">
-			<%= image_tag f.object.image.url(:medium) if f.object.image.present? %>
-			<%= f.file_field :image, class: 'form-control' %>
-		</div
+				<div class="col-md-6">
+					<%= image_tag f.object.image.url(:medium) if f.object.image.present? %>
+					<%= f.file_field :image, class: 'form-control' %>
+				</div>
+			</div>
 		</fieldset>
 		<div class="form-group form-actions">
 			<div class="col-md-8 col-md-offset-4">
