--- a/app/views/shareds/_footer.html.erb
+++ b/app/views/shareds/_footer.html.erb
@@ -21,7 +21,7 @@
 					</ul>
 				</div>
 				<div class="col-xs-12 col-sm-3">
-					<div class="text-list-footer">BELI PROPERTY</div>
+					<div class="text-list-footer">BELI</div>
 					<div class="br20"></div>
 					<div class="brd-btm-greey"></div>
 					<div class="br10"></div>
@@ -33,7 +33,7 @@
 					</ul>
 				</div>
 				<div class="col-xs-12 col-sm-3">
-					<div class="text-list-footer">JUAL PROPERTY</div>
+					<div class="text-list-footer">JUAL</div>
 					<div class="br20"></div>
 					<div class="brd-btm-greey"></div>
 					<div class="br10"></div>
