--- a/app/views/shareds/_navbar_top.html.erb
+++ b/app/views/shareds/_navbar_top.html.erb
@@ -1,4 +1,3 @@
-<!-- navbar -->
 <div class="main-nav-container navbar-fixed-top">
 	<div class="main-nav navbar navbar-default navbar-fixed-top shadow-bottom">
 		<div class="container">
@@ -15,17 +14,17 @@
 			<div class="navbar-collapse collapse">
 				<ul class="nav navbar-nav">
 					<li class="">
-						<%= link_to root_path do %>
+						<%= link_to root_path, class: 'white' do %>
 							<span class="fa fa-home"></span>
 						<% end %>          
 					</li>
 					<li class="">
-						<%= link_to catalog_path do %>
+						<%= link_to catalog_path, class: 'white' do %>
 							KATALOG
 						<% end %>         
 					</li>
 					<li class="">
-						<%= link_to single_post_path do %>
+						<%= link_to single_post_path, class: 'white' do %>
 							SINGLE POST
 						<% end %>      
 					</li>
@@ -33,15 +32,23 @@
 
 				<ul class="nav navbar-nav navbar-right">
 					<% if user_signed_in? %>
-						<li class="#">
-							<%= link_to current_user.email, root_path %>
-						</li>
-						<li class="">
-							<%= link_to 'Edit Profile', edit_user_registration_path %>
-						</li>
-						<li class="">
-							<%= link_to 'Logout', destroy_user_session_path, method: :delete, class: 'sign-in-link' %>        
-						</li>
+						 <ul class="nav navbar-nav navbar-right">
+			        <li class="dropdown">
+			          <a href="#" class="dropdown-toggle white" data-toggle="dropdown" role="button" aria-expanded="false">My Account <span class="caret"></span></a>
+			          <ul class="dropdown-menu" role="menu">
+			            <li>
+										<%= link_to 'Profile', member_home_path %>
+			            </li>
+			            <li>
+										<%= link_to 'Setting Account', edit_user_registration_path %>
+			            </li>
+			            <li class="divider"></li>
+			            <li>
+			            	<%= link_to 'Logout', destroy_user_session_path, method: :delete %>
+			            </li>
+			          </ul>
+			        </li>
+			      </ul>
 					<% else %>
 						<li class="#">
 							<a href="#" class="sign-in-link" data-toggle="modal" data-target="#login">
