--- a/app/views/publics/results.html.erb
+++ b/app/views/publics/results.html.erb
@@ -191,7 +191,7 @@
 
 				<div class="tab-content">
 					<div role="tabpanel1" class="tab-pane active" id="all">
-						<% @product.each do |f| %>
+						<% @products.each do |f| %>
 							<a href="#">
 								<div class="box-catalog-ads border-shadow-right">
 									<div class="col-sm-2">
@@ -225,7 +225,7 @@
 								</div>
 							</a>
 						<% end %>
-						<%= paginate @product %>
+						<%= paginate @products %>
 					</div>
 					<div role="tabpanel1" class="tab-pane" id="new">
 						<% (1..10).each do %>
