--- a/app/views/shareds/_navbar_top.html.erb
+++ b/app/views/shareds/_navbar_top.html.erb
@@ -40,7 +40,7 @@
 										<%= link_to 'Profile', member_home_path %>
 			            </li>
 			            <li>
-										<%= link_to 'Setting Account', edit_user_registration_path %>
+										<%= link_to 'Setting Account', member_profile_path %>
 			            </li>
 			            <li class="divider"></li>
 			            <li>
