--- a/app/views/publics/results.html.erb
+++ b/app/views/publics/results.html.erb
@@ -191,7 +191,7 @@
 
 				<div class="tab-content">
 					<div role="tabpanel1" class="tab-pane active" id="all">
-						<% @product.each do |f| %>
+						<% @products.each do |f| %>
 							<a href="#">
 								<div class="box-catalog-ads border-shadow-right">
 									<div class="col-sm-2">
