--- a/app/views/shareds/_carousel_top.html.erb
+++ b/app/views/shareds/_carousel_top.html.erb
@@ -36,7 +36,7 @@
 									<div class="search-input-top-index1">
 										<div class="col-md-12">
 											<label class="label-search-carousel">Lokasi</label>
-											<%= text_field_tag :title, nil, class: "form-control", placeholder: "Masukan Lokasi Pencarian" %>
+											<%= text_field_tag :location, nil, class: "form-control", placeholder: "Masukan Lokasi Pencarian" %>
 										</div>
 									</div>
 									<div class="br20"></div>
@@ -47,46 +47,25 @@
 										</div>
 										<div class="col-md-6">
 											<label class="label-search-carousel">Kondisi</label>
-											<select name="" class="form-control chosen-select" tabindex="2">
-												<option value="">Jenis Kondisi ...</option>
-												<option value="Sangat Baik">Sangat Baik</option>
-												<option value="Baik">Baik</option>
-												<option value="Cukup">Cukup</option>
-												<option value="Jelek">Jelek</option>
-											</select>
+											<%= select_tag :condition, options_for_select(condition, nil), prompt: 'Condition', class: 'form-control select-chosen' %>
 										</div>
 									</div>
 									<div class="br15"></div>
 									<div class="search-input-top-index">
 										<div class="col-md-6">
 											<label class="label-search-carousel">Dari Harga</label>
-											<select name="" class="form-control chosen-select" tabindex="2">
-												<option value="">Dari harga ...</option>
-												<option value="1">1</option>
-												<option value="1">1</option>
-												<option value="1">1</option>
-												<option value="1">1</option>
-												<option value="1">1</option>
-											</select>
+											<%= select_tag :price, options_for_select(price), prompt: 'Price', class: 'form-control select-chosen' %>
 										</div>
 										<div class="col-md-6">
 											<label class="label-search-carousel">Sampai Harga</label>
-											<select name="" class="form-control chosen-select" tabindex="2">
-												<option value="">Sampai harga ...</option>
-												<option value="1">1</option>
-												<option value="1">1</option>
-												<option value="1">1</option>
-												<option value="1">1</option>
-												<option value="1">1</option>
-												<option value="1">1</option>
-											</select>
+											<%= select_tag :price_to, options_for_select(price), prompt: 'Price to', class: 'form-control select-chosen' %>
 										</div>
 									</div>
 									<div class="br10"></div>
 									<div class="search-input-top-index">
 										<div class="col-md-12">
 											<label class="label-search-carousel">Kata Kunci</label>
-											<input type="text" class="form-control height40" name="" placeholder="Masukan Kata Kunci Pencarian">
+											<%= text_field_tag :title, nil, class: "form-control", placeholder: "Masukan Barang yang dicari" %>
 										</div>
 									</div>
 									<div class="br10"></div>
