--- a/app/views/backend/products/_form.html.erb
+++ b/app/views/backend/products/_form.html.erb
@@ -30,7 +30,7 @@
 						<div class="form-group">
 							<label class="col-md-4 control-label" for="example-chosen">Catalog Type</label>
 							<div class="col-md-6">
-								<%= f.select :catalog_type, options_for_select(catalog_type, f.object.catalog_type), {include_blank: 'catalog_type'}, class: 'select-chosen', id: 'example-chosen'  %>            
+								<%= f.select :catalog_type, options_for_select(catalog_type, f.object.catalog_type), {include_blank: 'catalog_type'}, class: 'select-chosen', id: 'example-chosen', required: true  %>            
 							</div>
 						</div>
 						<!-- <div class="form-group">
